[project]
name = "yolo-flower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics",
    "torch",
    "torchvision",
    "pillow",
    "numpy",
    # Grounding-DINOはgitリポジトリから直接インストール
    # または手動でクローンしてから uv sync を実行
]
